# Nyx

./: PROJECT_DIAGRAMS.md  _nyx_DevGridTest.luau  _nyx_DevPhysicsTest.luau  _nyx_DevStress500.luau  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
charon/roblox/CharonPlugin/: Applier.luau  Bridge.luau  Main.server.luau  Serializer.luau  UI.luau
dist-installer/payload/runtime/roblox/: init.lua
dist-installer/payload/runtime/unity/: init.cs
docs/: AgentMermaidDia1780876800.md  BrickColorPaletteId1780739244.md  FileInterpreters1749513600.md  MermaidDiagram1780272000.md  PROFILING.md  Renderer1749513600.md  ViewportRuntimeFollowups.md  optimization-plan.md
installer/: README.md
nyx_runtime/roblox/: demo_scene.luau  init.lua
nyx_runtime/unity/: init.cs
nyx_runtime/unreal/: init.cpp
presets/: roblox_object_test.luau  unity_object_test.cs  unreal_object_test.cpp
scripts/: stage-sidecars.mjs
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/nyx_runtime/roblox/: init.lua
src-tauri/nyx_runtime/unity/: init.cs
src-tauri/nyx_runtime/unreal/: init.cpp
src-tauri/skills/: FengshuiProtocol.md  LuaLuau.md  SecurityReview.md  SelfHelp.md  ViewportManual.md
src-tauri/src/: main.rs
src-tauri/src/agent_runtime/: mod.rs
src-tauri/src/commands/: agent.rs  filesystem.rs  mod.rs  renderer.rs  scene_runner.rs
src-tauri/src/renderer/: camera.rs  gizmo.rs  mesh.rs  mod.rs  ownership.rs  physics.rs  pipeline.rs  scene.rs  window.rs
src-tauri/src/renderer/physics/: mod.rs  nyx_physics.rs  roblox_physics.rs  unity_physics.rs  unreal_physics.rs
src-tauri/src/renderer/shaders/: common.wgsl  gizmo.wgsl  grid.wgsl  roblox.wgsl  sky.wgsl
src-tauri/src/security/: mod.rs
src-tauri/src/skills/: FengshuiProtocol.md  LuaLuau.md  SelfHelp.md  ViewportManual.md  mod.rs
src-tauri/src/state/: mod.rs
src/components/: ActivityBar.tsx  AiPanel.tsx  CommandPalette.tsx  CompletionPopup.tsx  DevMenu.tsx  EditorArea.tsx  HighlightOverlay.tsx  MenuBar.tsx  NotesPanel.tsx  PatchNotesList.tsx  PropertiesBar.tsx  ResizeFrame.tsx  RoadmapList.tsx  SearchBar.tsx  SettingsPanel.tsx  Sidebar.tsx  SourceControl.tsx  StartScreen.tsx  StatusBar.tsx  TerminalPanel.tsx  TitleBar.tsx  UpdateLogPanel.tsx  ViewportTab.tsx
src/devtools-stub/: index.ts
src/services/: AiService.ts  CaptureService.ts  Completer.ts  EditorService.ts  EngineProfiles.ts  FileService.ts  GitService.ts  LanguageMeta.ts  MenuService.ts  ModelService.ts  NativeCommands.ts  NotesStore.ts  PatchNotes.ts  RendererService.ts  RunService.ts  SceneService.ts  StateService.ts  SystemService.ts  TerminalTokenizer.ts  Tokenizer.ts  Tokenizer.worker.ts
src/state/: ClientState.ts  StateManager.ts  useStateKey.ts
src/styles/: ActivityBar.module.css  AiPanel.module.css  CommandPalette.module.css  CompletionPopup.module.css  DevMenu.module.css  EditorArea.module.css  MenuBar.module.css  NotesPanel.module.css  PatchNotesList.module.css  PropertiesBar.module.css  ResizeFrame.module.css  RoadmapList.module.css  SearchBar.module.css  SettingsPanel.module.css  Sidebar.module.css  SourceControl.module.css  StartScreen.module.css  StatusBar.module.css  TerminalPanel.module.css  TitleBar.module.css  UpdateLogPanel.module.css  ViewportTab.module.css  global.css
src/ui/: UILib.ts
tools/: build-installer.ps1
(+1 files in other folders)
