[package]
name = "thazts-ide"
version = "0.1.0"
description = "Thazts IDE - Desktop code editor"
authors = ["Thazts"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6.1", features = ["shell-open", "icon-ico"] }
rfd = "0.14"
wgpu = "0.20"
pollster = "0.3"
bytemuck = { version = "1", features = ["derive"] }
glam     = { version = "0.27", features = ["bytemuck"] }
mlua     = { version = "0.10", features = ["lua54", "vendored"] }
raw-window-handle = "0.5"
sysinfo  = "0.31"

[dependencies.rwh06]
package = "raw-window-handle"
version = "0.6"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_UI_Input_KeyboardAndMouse",
] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
