[package]
name = "thazts-ide"
version = "0.1.0"
description = "Thazts IDE - Desktop code editor"
authors = ["Thazts"]
license = ""
repository = ""
edition = "2021"
autobins = false

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6.1", features = [ "window-minimize", "window-close", "window-unmaximize", "window-maximize", "window-start-dragging", "window-set-position", "window-set-size", "shell-open", "icon-ico"] }
rfd = "0.14"
wgpu = "0.20"
pollster = "0.3"
bytemuck = { version = "1", features = ["derive"] }
glam     = { version = "0.27", features = ["bytemuck"] }
base64   = "0.22"
mlua     = { version = "0.10", features = ["lua54", "vendored"] }
raw-window-handle = "0.5"
sysinfo      = "0.31"
reqwest      = { version = "0.12", default-features = false, features = ["json", "stream", "native-tls"] }
futures-util = { version = "0.3", default-features = false, features = ["std"] }
keyring      = "2"
zeroize      = "1"
rpassword    = "7"
regex        = { version = "1", default-features = false, features = ["std"] }
tokio        = { version = "1", features = ["sync", "rt-multi-thread", "macros", "time", "net"] }
ratatui      = { version = "0.29", default-features = false, features = ["crossterm"] }
crossterm    = "0.28"
notify       = "6"
tiny_http    = "0.12"

[dependencies.rwh06]
package = "raw-window-handle"
version = "0.6"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Console",
] }

[[bin]]
name = "thazts-ide"
path = "src/main.rs"

[[bin]]
name = "nyx-keyman"
path = "src/bin/nyx_keyman.rs"

[[bin]]
name = "nyx-installer"
path = "src/bin/nyx_installer.rs"

[[bin]]
name = "NyxCli"
path = "src/bin/NyxCli/main.rs"

[[bin]]
name = "Charon"
path = "src/bin/Charon/main.rs"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
